[package]
name = "chessclock"
version = "0.3.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
anyhow = "1.0"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }

